Fixed several bugs: 1. Needed an extra space between the jobs displayed 2. Bug in the template where the projects have a grey overlay

--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -443,3 +443,7 @@ footer .footer-below {
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
+.modal-backdrop{
+    display:none;
+}
